syntax = "proto3";

/* >>
import "google/api/annotations.proto";
<< */

package CatalogApi;

message CatalogItemRequest {
	string id = 1;
}

message CatalogItemsRequest {
	string ids = 1;
	int32 pageSize = 2;
	int32 pageIndex = 3;
}

message CatalogItemResponse {
	string id = 1;
	string name = 2;
    string description=3;
    double price=4;
    string image=5;
}

message PaginatedItemsResponse {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	int64 count = 3;
	repeated CatalogItemResponse data = 4;
}

message AddProductRequest {
	string name = 1;
	string description = 2;
	double price = 3;
	string image = 4;
}

service Catalog {
	rpc AddAsync (AddProductRequest) returns (CatalogItemResponse) {
	}

	rpc GetItemById (CatalogItemRequest) returns (CatalogItemResponse) {
   /* >>
  	option (google.api.http) = {
        get: "/api/v1/catalog/items/{id}"
      };
	<< */
	}
  rpc GetItemsByIds (CatalogItemsRequest) returns (PaginatedItemsResponse) {}
}